; ModuleID = '/home/carl/AnghaBench/libui/_wip/table/extr_unix_tablemodel.c_uiTableModel_class_init.c'
source_filename = "/home/carl/AnghaBench/libui/_wip/table/extr_unix_tablemodel.c_uiTableModel_class_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@uiTableModel_dispose = common dso_local global i32 0, align 4
@uiTableModel_finalize = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @uiTableModel_class_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uiTableModel_class_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @uiTableModel_dispose, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.TYPE_2__* @G_OBJECT_CLASS(i32* %4)
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  store i32 %3, i32* %6, align 4
  %7 = load i32, i32* @uiTableModel_finalize, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call %struct.TYPE_2__* @G_OBJECT_CLASS(i32* %8)
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32 %7, i32* %10, align 4
  ret void
}

declare dso_local %struct.TYPE_2__* @G_OBJECT_CLASS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
